New tests and code refactoring